[package]
name = "range-filters"
version = "0.1.0"
edition = "2024"
authors = ["JP Reddy", "Mandy Alimaa", "Sarthak Khattar"]
description = "High-performance range filter implementation - DIVA (VLDB 2025 Best Research Paper)"
license = "MIT"
repository = "https://github.com/JP-Reddy/range-filters"
readme = "README.md"
keywords = ["range-filter", "data-structures", "bloom-filter", "database", "diva"]
categories = ["data-structures", "algorithms"]
  exclude = [
      "*.md",
      "!README.md",
      "diva_range_filter.pdf",
      "examples/tmp.rs",
      "results/",
      ".vscode/",
      ".idea/",
  ]

[dependencies]
dashmap = "6.1.0"
rand = "0.8"
rand_distr = "0.4"
fastbloom = "0.14.0"

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "query_benchmarks"
harness = false